# opengvl

./: .coverage  .env.example  .gitignore  .pre-commit-config.yaml  .pylintrc  Apptainer.def  LICENSE  Makefile  README.md  README2.md  main.py  models.py  pyproject.toml  pytest.ini  requirements.txt  results.py  tools_dataset.py  tools_for_data_extraction.py  voc_score.py
.github/workflows/: ci.yml
apptainer/: opengvl.def
configs/: gemini.json  gemma.json  gemma_full_eval.py  gpt.json
configs/data_loader/: huggingface.yaml  local.yaml
configs/dataset/: aloha_fold_shirts.yaml  berkeleymvp.yaml  chess_moves.yaml  cmustretch.yaml  excavator_toy.yaml  fmb.yaml  local_mock_small.yaml  nyudoor.yaml  nyufranka.yaml  pickplace_joint.yaml  so101_60_new.yaml  utokyo_xarm_pick_and_place.yaml
configs/experiments/: curate.yaml  finetune.yaml  predict.yaml  predict_cpu.yaml
configs/mapper/: gemini.yaml  regex.yaml
configs/mapping_prompts/: default.yaml
configs/model/: gemini.yaml  gemma.yaml  glm.yaml  openai.yaml  qwen.yaml
configs/prompt_phrases/: agent_focused.yaml  concise.yaml  conversational.yaml  default.yaml  direct.yaml  formal.yaml  question_oriented.yaml  reframing_completion.yaml  technical.yaml  verbose.yaml
configs/prompts/: concise.yaml  default.yaml  rigorous.yaml
experiments/: eval.job
jobs/: run_eval.sh  two_shot_eval.sh  zero_shot_eval.sh
notebooks/: 0_clients_inference.ipynb  1_lerebot_analysis.ipynb
opengvl/: data_loader.py  inference.py  lerobot_dataset_analysis.py  main.py  models.py  result_evaluator.py  temp_trash.py  utils.py  voc_score.py
opengvl/clients/: __init__.py  base.py  gemini.py  gemma.py  glm.py  kimi.py  openai.py  qwen.py
opengvl/data_loaders/: base.py  huggingface.py  local.py  training_dataloader.py
opengvl/mapper/: __init__.py  base.py  gemini_mapper.py  regex_mapper.py
opengvl/metrics/: __init__.py  base.py  voc.py
opengvl/models/: __init__.py  base.py  gemini.py  gemma.py  kimi.py  openai.py
opengvl/notebooks/: 0_clients_inference.ipynb  1_lerebot_analysis.ipynb
opengvl/results/: prediction.py
opengvl/scripts/: curate.py  finetune.py  predict.py
opengvl/tests/: TOFIX_test_data_loader.py  test_result_evaluator.py  test_voc_score.py
opengvl/utils/: aliases.py  constants.py  data_types.py  errors.py  hydra.py  images.py  inference.py  modeling.py  prompts.py  rate_limiter.py  training.py
results/: gemma3-12b-2shot-mutex_20250720_161317_results.jsonl  gemma3-12b-2shot-toto_20250720_211004_results.jsonl
src/: data_loader.py  inference.py  lerobot_dataset_analysis.py  main.py  models.py  result_evaluator.py  test_result_evaluator.py  test_voc_score.py  utils.py  voc_score.py
src/gvl/: cli.py  data_loader.py  main.py  models.py  result_evaluator.py  utils.py
src/models/: __init__.py  base.py  gemma.py
src/tests/: TOFIX_test_data_loader.py  test_data_loader.py  test_result_evaluator.py  test_voc_score.py
tests/: README.md  test_data_loaders.py  test_data_types.py  test_errors.py  test_inference_core.py  test_predict_inference.py  test_prediction_results.py  test_utilities.py  test_voc_metric.py  test_voc_score.py
