[project]
name = "gvl"
version = "0.1.0"
description = "Open source implementation of Generative Value Learning"
readme = "README.md"
authors = [
    { name = "Paweł Budzianowski", email = "budzianowski@gmail.com" },
]
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.8.1",
    "tyro>=0.8.4",
    "loguru>=0.7.2",
    "matplotlib>=3.9.1",
    "numpy>=1.22,<1.27",
    "scipy>=1.14.0",
    "torch>=2.2.0",
    "torchvision>=0.17.1,<0.18.0",
    "lerobot==0.1.0",
    "datasets>=2.20.0",
    "openai>=1.35.13",
    "google-genai>=0.7.2",
    "transformers>=4.42.4",
    "pillow>=10.4.0",
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
    "black>=24.10.0",
    "pytest>=8.4.1",
    "ruff>=0.12.2",
]

[tool.ruff]
target-version = "py39"
line-length = 120
fix = true

[tool.ruff.lint]
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]


[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S603"]

[tool.ruff.lint.isort]

[tool.black]
line-length = 120

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
gvl = "gvl.main:main"
