[project]
name = "gvl"
version = "0.1.0"
description = "Open source implementation of Generative Value Learning"
readme = "README.md"
authors = [
    { name = "Paweł Budzianowski", email = "budzianowski@gmail.com" },
]
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.8.1",
    "datasets>=2.19.0,<=3.6.0",
    "dotenv>=0.9.9",
    "google-genai>=1.24.0",
    "google-generativeai>=0.8.5",
    "ipykernel>=6.30.1",
    "isort>=6.0.1",
    "loguru>=0.7.3",
    "marimo>=0.14.10",
    "openai>=1.93.0",
    "lerobot",
    "pyright>=1.1.405",
    "pytest>=8.4.1",
    "ruff>=0.12.2",
    "scipy>=1.16.0",
    "tensorflow>=2.19.0",
    "tensorflow-datasets>=4.9.9",
    "tfds>=0.3",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "transformers>=4.53.0",
    "tiktoken>=0.11.0",
    "blobfile>=3.1.0",
    "seaborn>=0.13.2",
    "omegaconf>=2.3.0",
    "hydra-core>=1.3.2",
]

[project.optional-dependencies]
closed = [
    "openai>=1.93.0",
    "google-genai>=1.22.0",
]

[dependency-groups]
dev = [
    "black>=24.10.0",
    "pytest>=8.4.1",
    "ruff>=0.12.2",
]

[tool.ruff]
target-version = "py39"
line-length = 120
fix = true


[tool.ruff.lint]
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
ignore = [
    # Long exception messages outside class definitions (not useful for this project)
    "TRY003",
    # Don't force wrapping single raise statements into helper functions
    "TRY301",
    # Allow broad exception catching in tests / integration scaffolding if present
    # (Remove if you later want stricter error handling)
    # "TRY002",
]


[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S603"]

[tool.ruff.lint.isort]
required-imports = []

[tool.black]
line-length = 120

[tool.uv.sources]
lerobot = { git = "https://github.com/huggingface/lerobot.git", rev = "main" }
